# claude-md-symlinker

./: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
scripts/: claude-md-symlinker-installer.sh
src/: adapters.rs  cleaner.rs  cli.rs  config.rs  daemon.rs  discovery.rs  doctor.rs  exclude.rs  git.rs  install.rs  lib.rs  main.rs  materializer.rs  migration.rs  observe.rs  purge.rs  reconciler.rs  reporting.rs  repos.rs  service.rs  state.rs  watch.rs
tests/: integration.rs
